--- a/style.css
+++ b/style.css
@@ -10,14 +10,13 @@ body {
   }
 
   .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff ;
-    padding: 20px 40px;
-    border-bottom: 2px solid white;
-    
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  background-color: #333;
+  color: white;
+}
 
  
   .logo {
