--- a/style.css
+++ b/style.css
@@ -14,10 +14,21 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 15px 20px;
-  background-color: #333;
+  background-color:#fff ;
   color: white;
 }
 
+@media (max-width: 768px) {
+  .nav {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    background: #333;
+    padding: 10px;
+    border-radius: 5px;
+  }
  
   .logo {
     
