--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff ;
+    background-color: white;
     padding: 20px 40px;
     border-bottom: 2px solid white;
     
