--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+  
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -13,23 +14,12 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: #fff ;
     padding: 20px 40px;
     border-bottom: 2px solid white;
     
   }
 
-@media (max-width: 768px) {
-  .nav {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    right: 20px;
-    background: #333;
-    padding: 10px;
-    border-radius: 5px;
-  }
  
   .logo {
     
@@ -103,9 +93,3 @@ body {
       padding: 15px;
       font-size: 14px;
     }
-
-
-  
-  
-  
-  
