--- a/style.css
+++ b/style.css
@@ -102,5 +102,5 @@ body {
       color: black;
       text-align: center;
       padding: 15px;
-      font-size: 14px;
+      font-size: 14px
     }
